--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
         "cors": "^2.8.5",
         "express": "^4.18.2",
         "nano": "^10.1.2",
-        "ulid": "^2.3.0"
+        "ulid": "^2.3.0",
+        "uuid": "^9.0.1"
     },
     "devDependencies": {
         "@types/express": "^4.17.21",
