--- a/package.json
+++ b/package.json
@@ -15,14 +15,22 @@
         "url": "https://github.com/rrl-system/rrl-server/issues"
     },
     "homepage": "https://github.com/rrl-system/rrl-server#readme",
+    "type": "module",
     "dependencies": {
+        "bcrypt": "^5.1.1",
         "cors": "^2.8.5",
+        "dotenv": "^16.3.1",
         "express": "^4.18.2",
+        "google-auth-library": "^9.4.1",
+        "jsonwebtoken": "^9.0.2",
         "nano": "^10.1.2",
         "ulid": "^2.3.0"
     },
     "devDependencies": {
+        "@types/bcrypt": "^5.0.2",
+        "@types/dotenv": "^8.2.0",
         "@types/express": "^4.17.21",
+        "@types/jsonwebtoken": "^9.0.5",
         "@types/node": "^20.9.0"
     }
 }
