--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
+        "express-zip": "^3.0.0",
         "google-auth-library": "^9.4.1",
         "jsonwebtoken": "^9.0.2",
         "kafkajs": "^2.2.4",
