--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "ai",
         "server"
     ],
-    "author": "Mudrova Anastasia",
+    "author": "Vladislav Antoshkin",
     "license": "MIT",
     "bugs": {
         "url": "https://github.com/rrl-system/rrl-server/issues"
